--- a/MagicMirror/MagicMirror/MagicMirror.csproj
+++ b/MagicMirror/MagicMirror/MagicMirror.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>MagicMirror</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.10240.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -92,6 +92,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="client_secret.json" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -101,7 +102,22 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="OS\Monitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DTO\QOTD\Contents.cs" />
+    <Compile Include="Services\DTO\QOTD\Quote.cs" />
+    <Compile Include="Services\DTO\Weather\Currently.cs" />
+    <Compile Include="Services\DTO\Weather\Daily.cs" />
+    <Compile Include="Services\DTO\Weather\DailyData.cs" />
+    <Compile Include="Services\DTO\Weather\Flags.cs" />
+    <Compile Include="Services\DTO\Weather\Hourly.cs" />
+    <Compile Include="Services\DTO\Weather\HourlyData.cs" />
+    <Compile Include="Services\DTO\Weather\WeatherDataBase.cs" />
+    <Compile Include="Services\Responses\CalendarResponse.cs" />
+    <Compile Include="Services\Responses\QOTDResponse.cs" />
+    <Compile Include="Services\Responses\ServiceResponseBase.cs" />
+    <Compile Include="Services\Responses\WeatherServiceResponse.cs" />
+    <Compile Include="Services\ServiceManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -110,6 +126,27 @@
     <None Include="MagicMirror_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\StickyNote.png" />
+    <Content Include="Assets\WeatherImages\clear-day.png" />
+    <Content Include="Assets\WeatherImages\clear-night.png" />
+    <Content Include="Assets\WeatherImages\cloudy.png" />
+    <Content Include="Assets\WeatherImages\fog.png" />
+    <Content Include="Assets\WeatherImages\lobster.png" />
+    <Content Include="Assets\WeatherImages\partly-cloudy-day.png" />
+    <Content Include="Assets\WeatherImages\partly-cloudy-night.png" />
+    <Content Include="Assets\WeatherImages\rain.png" />
+    <Content Include="Assets\WeatherImages\sleet.png" />
+    <Content Include="Assets\WeatherImages\Small\clear-day-small.png" />
+    <Content Include="Assets\WeatherImages\Small\clear-night-small.png" />
+    <Content Include="Assets\WeatherImages\Small\cloudy-small.png" />
+    <Content Include="Assets\WeatherImages\Small\fog-small.png" />
+    <Content Include="Assets\WeatherImages\Small\lobster-small.png" />
+    <Content Include="Assets\WeatherImages\Small\partly-cloudy-day-small.png" />
+    <Content Include="Assets\WeatherImages\Small\partly-cloudy-night-small.png" />
+    <Content Include="Assets\WeatherImages\Small\rain-small.png" />
+    <Content Include="Assets\WeatherImages\Small\sleet-small.png" />
+    <Content Include="Assets\WeatherImages\Small\snow-small.png" />
+    <Content Include="Assets\WeatherImages\snow.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -129,6 +166,7 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
