--- a/MirrorCompanion/MirrorCompanion/MirrorCompanion.csproj
+++ b/MirrorCompanion/MirrorCompanion/MirrorCompanion.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>MirrorCompanion</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.10240.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -102,6 +102,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DTO\Note.cs" />
+    <Compile Include="Services\Requests\NoteRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -110,6 +112,13 @@
     <None Include="MirrorCompanion_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\CompanionAppIcon.scale-100.png" />
+    <Content Include="Assets\CompanionAppIcon150x150.png" />
+    <Content Include="Assets\CompanionAppIcon310x150.png" />
+    <Content Include="Assets\CompanionAppIcon44x44.png" />
+    <Content Include="Assets\CompanionAppIcon71x71.png" />
+    <Content Include="Assets\magicMirrorLogo.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -128,6 +137,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MagicMirror\MagicMirror.Web\MagicMirror.Web.csproj">
+      <Project>{a05be6a8-e322-4b9c-9bdb-9f9d022e60c7}</Project>
+      <Name>MagicMirror.Web</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
