Got the calendar oAuth working.

--- a/MagicMirror/MagicMirror/MagicMirror.csproj
+++ b/MagicMirror/MagicMirror/MagicMirror.csproj
@@ -92,7 +92,9 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="client_secret.json" />
+    <Content Include="client_secret.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
