--- a/MagicMirror/MagicMirror/MagicMirror.csproj
+++ b/MagicMirror/MagicMirror/MagicMirror.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="OS\Monitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DTO\Calendar\Event.cs" />
     <Compile Include="Services\DTO\Note\Note.cs" />
     <Compile Include="Services\DTO\QOTD\Contents.cs" />
     <Compile Include="Services\DTO\QOTD\Quote.cs" />
