--- a/MirrorWebService/MirrorWebService/Web.config
+++ b/MirrorWebService/MirrorWebService/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="NoteContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NoteContext-20160122130727; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NoteContext-20160122130727.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="NoteContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NoteContext-20160122130727; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NoteContext-20160122130727.mdf" providerName="System.Data.SqlClient" />
+    <add name="CalendarSettingContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=CalendarSettingContext-20160129085202; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CalendarSettingContext-20160129085202.mdf" providerName="System.Data.SqlClient" />
+    <add name="CalendarSetting" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=MirrorWebService.Models.CalendarSetting;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MirrorServiceContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MirrorServiceContext-20160129104301; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MirrorServiceContext-20160129104301.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -42,7 +44,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -63,6 +65,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
