--- a/MirrorCompanion/MirrorCompanion/MirrorCompanion.csproj
+++ b/MirrorCompanion/MirrorCompanion/MirrorCompanion.csproj
@@ -98,6 +98,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppConfiguration.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -106,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DTO\Note.cs" />
     <Compile Include="Services\Requests\NoteRequest.cs" />
+    <Compile Include="Services\Requests\NoteSettingsRequest.cs" />
     <Compile Include="Views\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
