--- a/MirrorWebService/MirrorWebService/Web.config
+++ b/MirrorWebService/MirrorWebService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,10 +9,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="NoteContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NoteContext-20160122130727; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NoteContext-20160122130727.mdf" providerName="System.Data.SqlClient" />
-    <add name="CalendarSettingContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=CalendarSettingContext-20160129085202; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CalendarSettingContext-20160129085202.mdf" providerName="System.Data.SqlClient" />
-    <add name="CalendarSetting" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=MirrorWebService.Models.CalendarSetting;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MirrorServiceContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MirrorServiceContext-20160129104301; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MirrorServiceContext-20160129104301.mdf" providerName="System.Data.SqlClient" />
+    <add name="NoteContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NoteContext-20160122130727; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NoteContext-20160122130727.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="CalendarSettingContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=CalendarSettingContext-20160129085202; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CalendarSettingContext-20160129085202.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="CalendarSetting" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=MirrorWebService.Models.CalendarSetting;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="MirrorServiceContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MirrorServiceContext-20160129104301; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MirrorServiceContext-20160129104301.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="NoteSettingsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=NoteSettingsContext-20160206181046; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NoteSettingsContext-20160206181046.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
